Preparation for the first optimization blog post. MOD: Introduced Mist_Profile for frame captures in order to get a good idea of how every frame is spent MOD: Fixed the random function to actually map a range of 2^30 instead of 2^15 MOD: Removed rendering when profiling in order to only get CPU time MOD: Removed seeding random when profiling in order to get consistent random results MOD: Made every tick the same amount of time for consistent AI behaviour per tick MOD: Made farmers restart their search if they fail to find a piece of land

--- a/Project/VS2017/Workshop.vcxproj
+++ b/Project/VS2017/Workshop.vcxproj
@@ -35,7 +35,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>LLVM-vs2014</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
     <SpectreMitigation>false</SpectreMitigation>
@@ -50,7 +50,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>LLVM-vs2014</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
     <SpectreMitigation>false</SpectreMitigation>
@@ -105,6 +105,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalOptions>-Ofast %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -120,6 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <MinimalRebuild />
+      <AdditionalOptions>-Ofast %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -127,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\3rd\Mist_Profiler.h" />
     <ClInclude Include="..\..\Source\3rd\Sokol\sokol_app.h" />
     <ClInclude Include="..\..\Source\3rd\Sokol\sokol_gfx.h" />
     <ClInclude Include="..\..\Source\3rd\Sokol\sokol_time.h" />
