MOD: Changed time calculations from half to int16_t timers at 1 ms accuracy in order to process 16 timers at onces instead of just 8. MOD: Prefetched memory when removing objects by prefetching the next index, this reduces some of the latency when we're going to be accessing an object from an index. RESULTS: We're now at an average of 2.7ms per tick, achieving our goal of less than 3ms per tick.

--- a/Project/VS2017/Workshop.vcxproj
+++ b/Project/VS2017/Workshop.vcxproj
@@ -85,7 +85,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c -mfma %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -96,7 +96,7 @@
       <ConformanceMode>true</ConformanceMode>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <MinimalRebuild />
-      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c -mfma %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -107,7 +107,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c -mfma %(AdditionalOptions)</AdditionalOptions>
       <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
@@ -124,7 +124,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <MinimalRebuild />
-      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-Ofast -mavx -mbmi2 -mavx2 -mf16c -mfma %(AdditionalOptions)</AdditionalOptions>
       <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
